[FIX] Fix styling of overflowing titles

--- a/ng-diogenes/src/styles/alignment.scss
+++ b/ng-diogenes/src/styles/alignment.scss
@@ -37,6 +37,10 @@
     word-wrap: break-word;
 }
 
+.no-overflow-everywhere {
+    word-wrap: anywhere;
+}
+
 .vertical-align-image {
     vertical-align: middle;
 }
